# client-db

./: package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/docs/: close_db_conn.md  get_list_of_db.md  open_db_conn.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/app/: commands.rs
src-tauri/src/database/: mod.rs  queries.rs
src-tauri/src/logger/: mod.rs
src-tauri/src/schemas/request/: connection.rs
src/components/: FormConnectURL.tsx  FormStandart.tsx  FullScreen.tsx  LeftScreen.tsx  Modal.tsx  Navbar.tsx  RightScreen.tsx
src/components/layout/: Header.tsx  Navbar.tsx  SideBar.tsx
src/components/login/: FormConnectURL.tsx  FormStandart.tsx  index.tsx
src/layout/: index.tsx
src/pages/: DataBasa.tsx
src/routes/: index.tsx
src/styles/: index.ts
src/types/: index.ts
