[package]
name = "client-db"
version = "1.0.0"
description = "PostgreSQL GUI"
authors = ["rado31"]
edition = "2021"

[lib]
name = "client_db_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postgres = "0.19.10"
once_cell = "1.21.3"
log = "0.4.27"

